# serde_with

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  SECURITY.md  bors.toml  clippy.toml  rustfmt.toml
.cargo/: audit.toml
.devcontainer/: Dockerfile  config  devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml  rust.json
.github/workflows/: audit.yaml  ci.yaml  publish-crates-io.yaml  scorecards-analysis.yml
serde_content/: CHANGELOG.md  Cargo.toml
serde_content/src/: de.rs  lib.rs  ser.rs
serde_content/tests/: version_numbers.rs
serde_with/: CHANGELOG.md  Cargo.toml
serde_with/src/: base58.rs  base64.rs  chrono.rs  chrono_0_4.rs  enum_map.rs  flatten_maybe.rs  formats.rs  guide.md  hex.rs  jiff_0_2.rs  json.rs  key_value_map.rs  lib.rs  rust.rs  schemars_0_8.rs  schemars_0_9.rs  schemars_1.rs  serde_conv.rs  time_0_3.rs  utils.rs  with_prefix.rs  with_suffix.rs
serde_with/src/content/: de.rs  mod.rs  ser.rs
serde_with/src/de/: const_arrays.rs  duplicates.rs  impls.rs  legacy_arrays.rs  mod.rs  skip_error.rs
serde_with/src/duplicate_key_impls/: error_on_duplicate.rs  first_value_wins.rs  last_value_wins.rs
serde_with/src/guide/: feature_flags.md  serde_as.md  serde_as_transformations.md
serde_with/src/ser/: const_arrays.rs  duplicates.rs  impls.rs  legacy_arrays.rs  mod.rs  skip_error.rs
serde_with/src/utils/: duration.rs
serde_with/tests/: base58.rs  base64.rs  chrono.rs  chrono_0_4.rs  hashbrown.rs  hashbrown_0_14.rs  hashbrown_0_16.rs  hashbrown_0_17.rs  indexmap.rs  indexmap_1.rs  indexmap_2.rs  jiff_0_2.rs  json.rs  rust.rs  schemars_0_8.rs  smallvec_1.rs  time_0_3.rs  utils.rs  version_numbers.rs  with_prefix.rs
serde_with/tests/derives/: deserialize_fromstr.rs
serde_with/tests/schemars_0_8/: main.rs  schemars_basic.json  schemars_deserialize_only_bug_735.json  utils.rs
serde_with/tests/schemars_0_8/snapshots/: bytes.json  default_on_null.json  duration.json  from_into.json  map.json  set_last_value_wins.json  set_last_value_wins_displaysfromstr.json  set_prevent_duplicates.json  set_prevent_duplicates_displaysfromstr.json  string_with_separator.json
serde_with/tests/schemars_0_8/test_std/: map.json  option.json  set.json  tuples.json  vec.json  vec_deque.json
serde_with/tests/schemars_0_9/: main.rs  schemars_basic.json  schemars_deserialize_only_bug_735.json  utils.rs
serde_with/tests/schemars_0_9/snapshots/: bytes.json  default_on_null.json  enum_map.json  key_value_map.json  key_value_map_enum.json  map_fixed.json  one_or_many_nested.json  one_or_many_prefer_one.json  pickfirst.json  pickfirst_nested.json  set_last_value_wins.json  set_prevent_duplicates.json
serde_with/tests/schemars_0_9/test_std/: map.json  set.json  tuples.json  vec.json  vec_deque.json
serde_with/tests/schemars_1/: main.rs  schemars_basic.json  schemars_deserialize_only_bug_735.json  utils.rs
serde_with/tests/schemars_1/snapshots/: duration.json  from_into.json  key_value_map_flatten.json  one_or_many_prefer_one.json  pickfirst.json  pickfirst_nested.json  set_last_value_wins_displaysfromstr.json  set_prevent_duplicates_displaysfromstr.json  string_with_separator.json
serde_with/tests/schemars_1/test_std/: option.json
serde_with/tests/serde_as/: collections.rs  default_on.rs  enum_map.rs  frominto.rs  fromintoref.rs  key_value_map.rs  lib.rs  map_tuple_list.rs  pickfirst.rs  serde_as_macro.rs  time.rs
serde_with/tests/trybuild/schemars_0_8/: fail.conditional_derive_disabled.rs  fail.conditional_derive_disabled.stderr  pass.conditional_derive_enabled.rs
serde_with_macros/: CHANGELOG.md  Cargo.toml
serde_with_macros/src/: apply.rs  lib.rs  utils.rs
serde_with_macros/tests/: compiler-messages.rs  deserialize_fromstr.rs  expand.rs  no_imports_or_clobbering.rs  serde_as_issue_538.rs  serialize_display.rs  skip_serializing_default.rs  skip_serializing_if.rs  skip_serializing_null.rs  version_numbers.rs
serde_with_macros/tests/compile-fail/: serde_as-enum-variant-499.rs  serde_as-enum-variant-499.stderr  serde_as.rs  serde_as.stderr  skip-none-always.rs  skip-none-always.stderr  skip-none-not-struct.rs  skip-none-not-struct.stderr
serde_with_macros/tests/expand/: serde_as.expanded.rs  serde_as.rs  skip_serializing_null.expanded.rs  skip_serializing_null.rs
serde_with_test/: Cargo.toml
serde_with_test/tests/: derive_display_alt_fromstr.rs  derive_display_fromstr.rs  derive_serialize_as.rs  flattened_maybe.rs  serde_as_cfg.rs  serde_as_crate_path.rs  serde_conv.rs  with_prefix.rs
src/: chrono.rs  duplicate_key_impls.rs  flatten_maybe.rs  formats.rs  guide.md  hex.rs  json.rs  lib.rs  option.rs  rust.rs  serde_as.rs  serde_conv.rs  utils.rs  with_prefix.rs
src/de/: const_arrays.rs  impls.rs  mod.rs
src/duplicate_key_impls/: error_on_duplicate.rs  first_value_wins.rs  last_value_wins.rs  mod.rs
src/guide/: migrating.md  serde_as.md  serde_as_transformations.md  test.md
src/ser/: const_arrays.rs  impls.rs  mod.rs
src/serde_as/: chrono.rs  hex.rs  json.rs  mod.rs  tests.rs
src/serde_as/de/: impls.rs  mod.rs
src/serde_as/ser/: impls.rs  mod.rs
src/utils/: duration.rs
tests/: chrono.rs  deserialize_fromstr.rs  hex.rs  json.rs  rust.rs  serde_as.rs  serde_as_duration.rs  serde_as_macro.rs  serialize_display.rs  utils.rs  version_numbers.rs  with_prefix.rs
tests/derives/: serialize_display.rs
tests/serde_as/: frominto.rs  lib.rs  map_tuple_list.rs  pickfirst.rs  serde_conv.rs
