[workspace]
members = [
    "serde_with",
    "serde_with_macros",
    "serde_with_test",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jonasbb/serde_with/"
rust-version = "1.64"
version = "3.4.0"

[workspace.metadata.release]
consolidate-commits = true
pre-release-commit-message = "Bump version to v{{version}}"
publish = false
push = false
shared-version = true
sign-tag = true
tag = false

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
