[workspace]
members = [
    "serde_with",
    "serde_with_macros",
    "serde_with_test",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jonasbb/serde_with/"
rust-version = "1.64"
version = "3.5.1"

[workspace.metadata.release]
consolidate-commits = true
pre-release-commit-message = "Bump version to v{{version}}"
publish = false
push = false
shared-version = true
sign-tag = true
tag = false

[workspace.lints.rust]

[workspace.lints.clippy]
# Checks for usage of `cloned()` on an `Iterator` or `Option` where `copied()` could be used instead.
cloned_instead_of_copied = "warn"
# Checks for literal calls to `Default::default()`.
default_trait_access = "warn"
# Checks for the presence of `_`, `::` or camel-case words outside ticks in documentation.
# Disabled due to FP: https://github.com/rust-lang/rust-clippy/issues/12075
# doc_markdown = "warn"
# Checks for closures which only invoke a method on the closure argument and can be replaced by referencing the method directly.
redundant_closure_for_method_calls = "warn"
