[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "serde_with_test"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s = {package = "serde", version = "1.0.75", features = ["derive"]}
s_json = {package = "serde_json", version = "1.0.59"}
s_with = {package = "serde_with", path = ".."}
