[package]
edition = "2021"
name = "serde_with_test"
publish = false
version = "0.0.0"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s = {package = "serde", version = "1.0.75", features = ["derive"]}
s_json = {package = "serde_json", version = "1.0.59"}
s_with = {package = "serde_with", path = "../serde_with"}

[package.metadata.release]
release = false
